fix z-index for sides

--- a/src/styles/virtualCardDetails.scss
+++ b/src/styles/virtualCardDetails.scss
@@ -151,7 +151,6 @@
   font-size: 10px;
   font-weight: 500;
   line-height: 12px;
-  z-index: 1;
 
   &:focus {
     outline: none;
